--- a/munkaim.html
+++ b/munkaim.html
@@ -25,17 +25,18 @@
         <div class="main-wrapper">
 
             <aside class="sidebar">
-                <h3>Tantárgyak</h3>
+                <h2>Tantárgyak</h2>
                 <ul>
                     <li><a href="#web">Webprogramozás</a></li>
                     <li><a href="#progalap">Programozási alapok</a></li>
                     <li><a href="#cisco">Hálózat (Cisco)</a></li>
                     <li><a href="#elektro">Bevezetés az elektronikába</a></li>
                 </ul>
+
                 <div class="sidebar-info">
-                    <h4>Hasznos linkek</h4>
-                    <p><a href="https://github.com/" target="_blank">GitHub</a></p>
-                    <p><a href="https://szamalk-szalezi.hu/" target="_blank">SZÁMALK</a></p>
+                    <h3>Hasznos linkek</h3>
+                    <p><a href="https://github.com/" target="_blank" rel="noopener">GitHub</a></p>
+                    <p><a href="https://szamalk-szalezi.hu/" target="_blank" rel="noopener">SZÁMALK</a></p>
                 </div>
             </aside>
 
@@ -53,65 +54,56 @@
                             </p>
                         </div>
                         <div class="project-image">
-                            <img src="kepek/sakk.png" alt="Webprogramozás munka">
+                            <img src="kepek/sakk.png" alt="Sakk tábla weboldal">
                         </div>
                     </div>
                 </section>
 
                 <section id="progalap" class="subject-section">
                     <h2>Programozási alapok</h2>
-                    <p>
                     <div class="project-item">
                         <div class="project-text">
-                            <h3>dolgozat</h3>
+                            <h3>Osztályok dolgozat</h3>
                             <p><strong>Készült:</strong> 2025. December</p>
-                            <p>Az osztályok használata és az ágazati alapviszgára gyakorlás.</p>
-
+                            <p>Az osztályok használata és az ágazati alapvizsgára gyakorlás Python nyelven.</p>
                             <p class="source-link">
                                 <strong>Forrás:</strong> <a href="https://github.com/wolfstons/P-czi_Bal-zs_dolgozat2"
                                     target="_blank">Megtekintés GitHubon</a>
                             </p>
                         </div>
-
                         <div class="project-image">
-                            <img src="kepek/progdoga.png" alt="osztályok használata">
+                            <img src="kepek/progdoga.png" alt="Python kód osztályokkal">
                         </div>
                     </div>
-                    </p>
                 </section>
 
                 <section id="cisco" class="subject-section">
                     <h2>Hálózat (Cisco)</h2>
-                    <p>
                     <div class="project-item">
                         <div class="project-text">
-                            <h3>Sakk tábla</h3>
+                            <h3>Hálózati infrastruktúra</h3>
                             <p><strong>Készült:</strong> 2025. november</p>
-                            <p>A feladat egy hálózat kiépítése volt.</p>
+                            <p>A feladat egy komplett hálózat kiépítése és konfigurálása volt Cisco Packet Tracer-ben.
+                            </p>
                         </div>
-
                         <div class="project-image">
-                            <img src="kepek/cisco.png" alt="hálózat">
+                            <img src="kepek/cisco.png" alt="Cisco hálózati topológia">
                         </div>
                     </div>
-                    </p>
                 </section>
 
                 <section id="elektro" class="subject-section">
                     <h2>Bevezetés az elektronikába</h2>
-                    <p>
                     <div class="project-item">
                         <div class="project-text">
-                            <h3>Sakk tábla</h3>
+                            <h3>Visszaszámláló kijelző</h3>
                             <p><strong>Készült:</strong> 2025. november</p>
-                            <p>A feladat egy kijelzű felépítése volt amely vissza számlál.</p>
+                            <p>A feladat egy hét szegmenses kijelző felépítése volt, amely visszaszámlálást végez.</p>
                         </div>
-
                         <div class="project-image">
-                            <img src="kepek/kijelzo.jpg" alt="számláló kijelző">
+                            <img src="kepek/kijelzo.jpg" alt="Elektronikai áramkör kijelzővel">
                         </div>
                     </div>
-                    </p>
                 </section>
             </main>
         </div>
